--- a/css/style.css
+++ b/css/style.css
@@ -465,6 +465,11 @@ img{
 	position:relative;
 	margin-bottom:70px;
 }
+@media only screen and (max-width: 767px){
+	.sec-title{
+		margin-bottom: 40px;
+	}
+}
 
 .sec-title .title-inner{
 	position: relative;
@@ -502,7 +507,7 @@ img{
 .sec-title h2{
 	position:relative;
 	color:#1e1e29;
-	font-size:30px;
+	font-size:0.6rem;
 	font-weight:700;
 	line-height:1.4em;
 	display: inline-block;
@@ -1476,7 +1481,6 @@ img{
 	display:none;
 }
 
-
 /*--------手机端header样式------*/
 @media only screen and (max-width: 767px){
 	.main-header{
@@ -1507,7 +1511,16 @@ img{
 		font-weight: 500;
 	}
 	.page-wrapper{
-		padding-top: 86px;
+		padding-top: 85px;
+	}
+}
+/*--------ipad端header样式------*/
+@media only screen and (max-width: 769px) and (min-width: 767px){
+	.main-header{
+		position: fixed;
+	}
+	.page-wrapper{
+		padding-top: 188px;
 	}
 }
 
@@ -1602,7 +1615,7 @@ img{
 .main-slider h3{
 	position:relative;
 	color:#ffffff;
-	font-size:0.84rem;
+	font-size:0.6rem;
 	font-weight:400;
 	/* margin-bottom:120px; */
 	display:inline-block;
@@ -1800,6 +1813,12 @@ img{
 	}
 	.main-slider h3 span{
 		font-size: 0.40rem;
+	}
+	.main-slider h2{
+		font-size: 0.40rem;
+	}
+	.main-slider h2 span{
+		font-size: 0.48rem;
 	}
 }
 
@@ -10660,4 +10679,17 @@ img{
 	left: 0;
 	width: 100%;
 	height: 100%;
+}
+.content-box .content.text-center {
+	padding-top: 50%;
+    transform: translateY(-50%);
+    position: relative;
+}
+.content-box .content.text-right{
+	text-align: right;
+	top: 50%;
+	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%); 
+    position: absolute;
+    right: 3%;
 }
