--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 /*font-family: 'Microsoft Yahei', serif;
 font-family: 'Microsoft Yahei', sans-serif;*/
-
+@import url('bootstrap4.css');
 @import url('font-awesome.css');
 @import url('flaticon.css');
 @import url('animate.css');
