--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ p{
 	margin:0 auto;
 	width:100%;
 	min-width:300px;
-	/* padding-top: 86px; */
+	height: 100%;
 }
 
 ul,li{
@@ -129,6 +129,7 @@ ul,li{
 img{
 	display:inline-block;
 	max-width:100%;
+	width: 100%;
 }
 
 .theme-btn{
@@ -10698,9 +10699,13 @@ img{
 	height: 100%;
 }
 .content-box .content.text-center {
-	padding-top: 50%;
-    transform: translateY(-50%);
-    position: relative;
+	position: absolute;
+    top: 50%;
+    left: 50%;
+	transform:translate(-50%,-50%);
+	-webkit-transform:translate(-50%,-50%);
+	-ms-transform:translate(-50%,-50%);
+	-o-transform:translate(-50%,-50%);
 }
 .content-box .content.text-right{
 	text-align: right;
@@ -10733,4 +10738,51 @@ header .main-menu .navigation > li > ul>li>a{
     -ms-transition: all 500ms ease;
     -o-transition: all 500ms ease;
 	font-family: 'Microsoft Yahei', serif;
+}
+/*--------公共样式-------*/
+/*白色*/
+.my-color1{
+	color: #fff;
+}
+/*黄绿色*/
+.my-color2{
+	color: #bed533;
+}
+/*行居中*/
+.my-row-center{
+	position: absolute;
+    left: 50%;
+	transform:translateX(-50%);
+	-webkit-transform:translateX(-50%);
+	-ms-transform:translateX(-50%);
+	-o-transform:translateX(-50%);
+}
+/*列居中*/
+.my-column-center{
+	position: absolute;
+    top: 50%;
+	transform:translateY(-50%);
+	-webkit-transform:translateY(-50%);
+	-ms-transform:translateY(-50%);
+	-o-transform:translateY(-50%);
+}
+/*全居中*/
+.my-all-center{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform:translate(-50%,-50%);
+	-webkit-transform:translate(-50%,-50%);
+	-ms-transform:translate(-50%,-50%);
+	-o-transform:translate(-50%,-50%);
+}
+
+/*----------slider样式----------*/
+.swiper-container{
+	width: 100%;
+	height: 100%;
+}
+.swiper-slide .slide-bg{
+	width: 100%;
+	height: 100%;
 }
