--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ ul,li{
 img{
 	display:inline-block;
 	max-width:100%;
-	width: 100%;
+	height:auto;	
 }
 
 .theme-btn{
@@ -404,11 +404,7 @@ img{
 
 .preloader{ position:fixed; left:0px; top:0px; width:100%; height:100%; z-index:999999; background-color:#ffffff; background-position:center center; background-repeat:no-repeat; background-image:url(../images/icons/preloader.svg);}
 
-img{
-	display:inline-block;
-	max-width:100%;
-	height:auto;	
-}
+
 
 /*** 
 
@@ -10748,10 +10744,40 @@ header .main-menu .navigation > li > ul>li>a{
 .my-color2{
 	color: #bed533;
 }
+/*蓝色*/
+.my-color3{
+	color: #093947;
+}
+/*黑色*/
+.my-color4{
+	color: #333;
+}
+/*白色*/
+.my-bg-color1{
+	background-color: #fff;
+}
+/*黄绿色*/
+.my-bg-color2{
+	background-color: #aec340;
+}
+/*蓝色*/
+.my-bg-color3{
+	background-color: #0c687f;
+}
+/*黑色*/
+.my-bg-color4{
+	background-color: #333;
+}
+
+.my-font1{
+	font-size: 22px;
+	font-weight: 600;
+}
 /*行居中*/
 .my-row-center{
 	position: absolute;
-    left: 50%;
+	left: 50%;
+	max-width: 100%;
 	transform:translateX(-50%);
 	-webkit-transform:translateX(-50%);
 	-ms-transform:translateX(-50%);
@@ -10760,7 +10786,8 @@ header .main-menu .navigation > li > ul>li>a{
 /*列居中*/
 .my-column-center{
 	position: absolute;
-    top: 50%;
+	top: 50%;
+	max-height: 100%;
 	transform:translateY(-50%);
 	-webkit-transform:translateY(-50%);
 	-ms-transform:translateY(-50%);
@@ -10771,6 +10798,8 @@ header .main-menu .navigation > li > ul>li>a{
 	position: absolute;
 	top: 50%;
 	left: 50%;
+	max-width: 100%;
+	max-height: 100%;
 	transform:translate(-50%,-50%);
 	-webkit-transform:translate(-50%,-50%);
 	-ms-transform:translate(-50%,-50%);
