--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,12 @@
 
 /*font-family: 'Microsoft Yahei', serif;
 font-family: 'Microsoft Yahei', sans-serif;*/
+
 @import url('bootstrap4.css');
 @import url('font-awesome.css');
 @import url('flaticon.css');
 @import url('animate.css');
+@import url('animate.min.css');
 @import url('common.css');
 @import url('owl.css');
 @import url('jquery-ui.css');
