关于我们地图样式

--- a/css/map.css
+++ b/css/map.css
@@ -53,6 +53,8 @@
 .region-list.waite .show-regin span{color:#ccc}
 .postition-1{left: 45%;top: 63%;}
 .postition-2{left: 51%;top: 68%;}
+.postition-2-1{left: 48%;top: 68%;}
+.postition-2-2{left: 56%;top: 65%;}
 .postition-3{left: 68%;top: 64%;}
 .postition-4{left: 73%;top: 80%;}
 .postition-5{left: 83%;top: 65%;}
