--- a/css/style.css
+++ b/css/style.css
@@ -2871,7 +2871,7 @@ img{
 .key-block .inner-box .content .text{
 	position: relative;
 	color: #ffffff;
-	font-size: 14px;
+	font-size: 16px;
 	line-height: 1.6em;
 	text-align: left;
 	flex: 8;
@@ -10817,7 +10817,21 @@ header .main-menu .navigation > li > ul>li>a{
 
 /*-----------整椅板块样式-------------*/
 .slide-zy .content{
-	display: flex;
+	/* display: flex; */
+	position: absolute;
+    top: 50%;
+	left: 50%;
+	height: 85%;
+	margin-top: 3%;
+    /* max-width: 100%;
+    max-height: 100%; */
+    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    -o-transform: translate(-50%,-50%);
+}
+.slide-zy .zy-img{
+	height: 100%;
 }
 .slide-zy .point{
 	position: absolute;
