--- a/css/map.css
+++ b/css/map.css
@@ -21,7 +21,7 @@
 0%{-webkit-transform:scale(0);-moz-transform:scale(0);-o-transform:scale(0);transform:scale(0);opacity:1}
 100%{-webkit-transform:scale(1);-moz-transform:scale(1);-o-transform:scale(1);transform:scale(1);opacity:0}
 }
-.area-box .dot{position:absolute;left:0;width:10px;height:10px;-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%;background:#a2a9b4;opacity:1;filter:alpha(opacity=100)}
+.area-box .dot{position:absolute;left:0;width:10px;height:10px;-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%;opacity:1;filter:alpha(opacity=100)}
 .area-box .pulse{position:absolute;top:-28px;left:-28px;height:66px;width:66px;border:2px solid #b7b7b7;-webkit-border-radius:48px;-moz-border-radius:48px;border-radius:48px;-webkit-box-shadow:0 0 4px #82878f,0 0 10px #82878f inset;-moz-box-shadow:0 0 4px #82878f,0 0 10px #82878f inset;box-shadow:0 0 4px #82878f,0 0 10px #82878f inset;opacity:.12;filter:alpha(opacity=0);-webkit-animation:warn 2s ease-out both;-moz-animation:warn 2s ease-out both;-o-animation:warn 2s ease-out both;animation:warn 2s ease-out both;-webkit-animation-iteration-count:infinite;-moz-animation-iteration-count:infinite;-o-animation-iteration-count:infinite;animation-iteration-count:infinite;background:0 0}
 .area-box .delay-01{-webkit-animation-delay:0;-moz-animation-delay:0;-o-animation-delay:0;animation-delay:0}
 .area-box .delay-02{-webkit-animation-delay:.4s;-moz-animation-delay:.4s;-o-animation-delay:.4s;animation-delay:.4s}
@@ -34,23 +34,28 @@
 .area-box .delay-09{-webkit-animation-delay:-.8s;-moz-animation-delay:-.8s;-o-animation-delay:-.8s;animation-delay:-.8s}
 .area-box .delay-10{-webkit-animation-delay:-1.2s;-moz-animation-delay:-1.2s;-o-animation-delay:-1.2s;animation-delay:-1.2s}
 .area-box .delay-11{-webkit-animation-delay:4s;-moz-animation-delay:4s;-o-animation-delay:4s;animation-delay:4s}
-.region-list.active .area-box .dot{background:#009fd9}
+/* .region-list.active .area-box .dot{background:#009fd9} */
 .region-list.active .area-box .pulse{border-color:#009fd9;top:-39px;left:-39px;height:88px;width:88px;-webkit-box-shadow:0 0 12px #0080d9,0 0 20px #0080d9 inset;-moz-box-shadow:0 0 12px #0080d9,0 0 20px #0080d9 inset;box-shadow:0 0 12px #0080d9,0 0 20px #0080d9 inset}
-.region-list.waite .area-box .dot{background:#fd7e14}
+/* .region-list.waite .area-box .dot{background:#fd7e14} */
 .region-list.waite .area-box .pulse{border-color:#fd7e14}
-.region-list.color1 .area-box .dot{background:red}
+/* .region-list.color1 .area-box .dot{background:red} */
+.region-list .area-box .dot{
+    /* background: url('../images/icons/marker1.png') 100% 100% no-repeat; */
+}
+.region-list.color1 .area-box .dot{
+    /* background: url('../images/icons/marker2.png'); */
+}
 .region-list.color1 .area-box .pulse{border-color:red}
 .show-regin{position:absolute;left:2px;height:0;top:0;width:11px;opacity:0;-o-transition:all .5s ease-in-out;-webkit-transition:all .5s ease-in-out;-moz-transition:all .5s ease-in-out;transition:all .5s ease-in-out}
 .online-node .show-regin,.region-list:hover .show-regin,.underline-node .show-regin,.waite-node .show-regin{height:10px;opacity:1}
-.show-regin span{width:80px;position:absolute;left:5px;top:-11px;padding:6px 10px;font-size:14px;color:#ccc;-moz-border-radius:2px;-webkit-border-radius:2px;border-radius:2px;text-align:center;white-space:nowrap;}
+.show-regin span{width:80px;position:absolute;left:5px;top:-11px;padding:6px 10px;font-size:14px;color:#fff;-moz-border-radius:2px;-webkit-border-radius:2px;border-radius:2px;text-align:center;white-space:nowrap;}
 .postition-10 .show-regin span{left:0}
 .postition-1 .show-regin span{left:-45px;}
-.postition-2 .show-regin span{left:-10px;}
+.postition-2 .show-regin span{left: -30px;top: 20px;}
 .postition-6 .show-regin span{left:-42px}
 .area-box{z-index:77}
 .show-regin{z-index:66}
-.region-list.active .show-regin span{position:relative;color:#ccc}
-.region-list.waite .show-regin span{color:#ccc}
+.region-list.active .show-regin span{position:relative;color:#fff}
 .postition-1{left: 45%;top: 63%;}
 .postition-2{left: 51%;top: 68%;}
 .postition-2-1{left: 50%;top: 65%;}
@@ -74,7 +79,7 @@
 @media only screen and (min-width: 769px){
     .china-map{
         width: 30%;
-        margin-left: 55%;
+        margin-left: 45%;
         margin-top: 3%;
         margin-bottom: 3%;
     }
