--- a/css/style.css
+++ b/css/style.css
@@ -10962,5 +10962,6 @@ header .main-menu .navigation > li > ul>li>a{
 	right: 40px;
 	bottom: 100px;
 	z-index: 1000;
+	padding: 10px;
 	display: none;
 }
