产品中心和技术能力

--- a/css/style.css
+++ b/css/style.css
@@ -10815,7 +10815,7 @@ header .main-menu .navigation > li > ul>li>a{
 }
 /*黄绿色*/
 .my-bg-color2{
-	background-color: #aec340;
+	background-color: rgba(174,195,64,1);
 }
 /*蓝色*/
 .my-bg-color3{
