--- a/m/css/style.css
+++ b/m/css/style.css
@@ -61,7 +61,7 @@ body {
     min-width: 320px;
     margin: 0 auto;
     width: 100%;
-	height: 100%;
+	/* height: 100%; */
 	overflow-y: scroll;
     overflow-x: hidden;
 }
