--- a/m/css/style.css
+++ b/m/css/style.css
@@ -737,42 +737,84 @@ section{
 /*-----------整椅板块样式-------------*/
 .slide-zy .content{
 	position: absolute;
-	bottom: 0;
+	bottom: 17%;
 }
 .slide-zy .point{
 	position: absolute;
 	display: flex;
-    flex-direction: column;
-    align-items: center;
+	align-items: center;
+	width: 60%;
+	/* background: red; */
 }
 .slide-zy .point>img{
-	width: 25px;
+	width: 20px;
+	height: 20px;
+}
+
+.slide-zy .point .line{
+	display: flex;
+	align-items: center;
+	width:35%;
+	color: #fff;
+}
+.slide-zy .point1 .line{
+	width: 35%;
+}
+.slide-zy .point2 .line{
+	width: 8%;
+}
+.slide-zy .line .small-point{
+	display: inline-block;
+	width:98%;
+	border-bottom: 1px dashed #fff;
+    height: 2px;
 }
 .slide-zy .point1{
-	top: 13%;
-    left: 50%;
+	top: 25%;
+    left: -15%;
 }
+
 .slide-zy .point2{
-	top: 42%;
-    left: 37%;
+	top: 53%;
+    left: -38%;
 }
 .slide-zy .point3{
-	top: 24%;
-    left: 77%;
+	top: 30%;
+	/* left: 62%; */
+	right: -22%;
 }
 .slide-zy .point4{
-	top: 36%;
-    left: 62%;
+	top: 45%;
+	/* left: 52%; */
+	right:-12%;
 }
 .slide-zy .point-text{
-	min-width: 70px;
-	width: max-content;
-	padding: 2px 10px;
-	background: rgba(191,215,50,1);
-	border-radius: 15px;
-	text-align: center;
-	margin-top: 5px;
+	min-width: 60px;
+	padding: 0 5px;
+}
+.slide-zy .point1,
+.slide-zy .point2{
+	justify-content: flex-end;
+}
+.slide-zy .point3,
+.slide-zy .point4{
+	justify-content: flex-start;
+}
+.slide-zy .point1 .point-text,
+.slide-zy .point2 .point-text{
+	
+	text-align: right;
+}
+.slide-zy .point3 .point-text,
+.slide-zy .point4 .point-text{
+	
+	text-align: left;
+}
+.slide-zy a{
 	color: #fff;
+}
+.slide-zy a:hover{
+	color: rgba(191,215,50,1);
 }
 
 /*回到顶部样式*/
