移动端英文版

--- a/css/style.css
+++ b/css/style.css
@@ -1206,7 +1206,7 @@ img{
 	color:#ffffff;
 	text-align:center;
 	line-height:30px;
-	text-transform:uppercase;
+	/* text-transform:uppercase; */
 	letter-spacing:0px;
 	opacity:1;
 	font-weight:700;
@@ -3665,6 +3665,13 @@ img{
 }
 .main-footer.en .auto-container{
 	max-width: 1300px;
+}
+.main-footer.en  .column2{
+	margin-left: 0;
+	text-align: center;
+}
+.main-footer.en .footer-widget h5{
+	font-size: 12px;
 }
 
 /*Footer Nav*/
